Fix custom months title misalignment

--- a/inst/shiny_app/www/bcgov.css
+++ b/inst/shiny_app/www/bcgov.css
@@ -21,6 +21,10 @@
   color: #3c8dbc;
 }
 
+.row h4 {
+  margin-left: 15px;
+}
+
 /* BC Gov themeing */
 
 /* Gold bottom border */
